k8s/kos-svc/sit/10-usagedata-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usagedata-db
  labels:
    app: usagedata-db
spec:
  selector:
    matchLabels:
      app: usagedata-db
  template:
    metadata:
      labels:
        app: usagedata-db
    spec:
      containers:
      - name: usagedata-db
        image: kos-cluster.icp:8500/kos-mvp/usagedata-db
        imagePullPolicy: "Always"
        ports:
          - containerPort: 8080
