k8s/kos-svc/sit/20-cachemanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manage-cache
  labels:
    app: manage-cache
spec:
  selector:
    matchLabels:
      app: manage-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: manage-cache
    spec:
      containers:
      - name: manage-cache
        image: kos-cluster.icp:8500/kos-mvp/manage-cache
        imagePullPolicy: "Always"
        ports:
         - containerPort: 8080
