k8s/kos-svc/sit/30-usagedata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usagedata
  labels:
    app: usagedata
spec:
  selector:
    matchLabels:
      app: usagedata
  replicas: 4
  template:
    metadata:
      labels:
        app: usagedata
    spec:
      containers:
      - name: usagedata
        image: kos-cluster.icp:8500/kos-mvp/usagedata
        imagePullPolicy: "Always"
        ports:
         - containerPort: 8080
  strategy:
    rollingUpdate:
      maxSurge: 50%
