k8s/kos-svc/sit/32-usagedata-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: usagedata
  labels:
    app: usagedata
spec:
  rules:
  - host: kos.169.56.74.2.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: usagedata
          servicePort: 8080
